solar-system/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: solar-system
  name: solar-system-service
  namespace: aplications

spec:
  ports:
  - port: 80 
    protocol: TCP
    targetPort: 80 
    nodePort: 30333
  selector:
    app: solar-system
  type: NodePort
