solar-system/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-system-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: solar-system.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solar-system-service
            port:
              number: 80
